# hs-cedict-parser

./: .gitignore  README.md  cabal.sandbox.config  cedict-parser.cabal
src/: Main.hs  parsecBasics.hs
src/Cedict/: Entry.hs  Parser.hs
test/: CedictParserTests.hs  Main.hs  UnitTests.hs
test/Cedict/Parser/: Tests.hs
